--- a/index.html
+++ b/index.html
@@ -1,15 +1,93 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" type="image/svg+xml" href="/vite.svg">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- link css here only when ccs is not imported in js yet -->
-    <!-- <link rel="stylesheet" href="/css/style.css"> -->
-    <title>Hello</title>
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-    <!-- <script src="./js/app.js" type="module"></script> -->
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <link rel="icon" type="image/svg+xml" href="/vite.svg">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="syle.css">
+  <meta name="description" content="dising">
+  <title>dising</title>
+</head>
+
+<body>
+  <header>
+    <nav>
+      <img id="logoA" src="assets/logo.svg" alt="rond_logo">
+      <a href="#">Free Consultation</a>
+    </nav>
+  </header>
+  <main>
+    <article>
+      <h1>Design solution made easy</h1>
+      <p class="text1">With over ten years of experience in various design disciplines, I’m your one-stop shop for your
+        design needs.
+      </p>
+    </article>
+    <section id="cardcontent">
+      <article id="card1">
+        <!-- <img class="imgraphic" src="assets/pattern-graphic-design.svg" alt="graphique-design-image"> -->
+        <h2 class="card_text">Graphic Design</h2>
+      </article>
+      <article id="card2">
+        <!-- <img class="card2e3" src="assets/pattern-ui-ux.svg" alt="ui-ux-image"> -->
+        <h2 class="card_text">UI/UX</h2>
+      </article>
+      <article id="card3">
+        <!-- <img class="card2e3" src="assets/pattern-apps.svg" alt="pattern-image"> -->
+        <h2 class="card_text">Apps</h2>
+      </article>
+      <article id="card4">
+        <!-- <img class="auser" src="assets/pattern-illustrations.svg" alt="illustration-image"> -->
+        <h2 class="card_text">Illustrations</h2>
+      </article>
+      <article id="card5">
+        <!-- <img class="auser" src="assets/pattern-photography.svg" alt="photography-image"> -->
+        <h2 class="card_text">Photography</h2>
+      </article>
+      <article id="card6">
+        <!-- <img class="auser" src="assets/pattern-motion-graphics.svg" alt="motion-graphics-image"> -->
+        <p class="card_text">Motion Graphics</p>
+      </article>
+    </section>
+    <article id="sectionamy">
+      <img id="amyimg" src="assets/image-amy.webp" alt="image-amy-web">
+      <h2 class="amytitre">i'm Amy, and i'd love to work on your next project</h2>
+      <p class="textamy">I love working with others to create beautiful design solutions. I’ve designed everything from
+        brand
+        illustrations to complete mobile apps. I’m also handy with a camera!</p>
+      <a class="btnamy" href="#">Free Consultation</a>
+    </article>
+    <article class="articlemywork">
+      <h2 class="mywork">My Work</h2>
+      <!-- <img src="assets/image-slide-1.jpg" alt="">
+      <img src="assets/image-slide-2.jpg" alt="">
+      <img src="assets/image-slide-3.jpg" alt="">
+      <img src="assets/image-slide-4.jpg" alt="">
+      <img src="assets/image-slide-5.jpg" alt=""> -->
+      <section class="btncontent">
+        <button class="btnd"><img src="assets/icon-arrow-left.svg" alt="fléche-droit-img"></button>
+        <button class="btng"><img src="assets/icon-arrow-right.svg" alt="fléche-gauche-img"></button>
+      </section>
+
+    </article>
+    <article class="articlebook">
+      <section class="blackcadre">
+        <h2 class="titrebook">Book a call with me</h2>
+        <p class="textbook">I’d love to have a chat to see how I can help you. The best first step is for us to discuss
+          your project
+          during
+          a free consultation. Then we can move forward from there.</p>
+        <a class="btnbook" href="#">Free Consultation</a>
+      </section>
+    </article>
+  </main>
+  <footer>
+    <nav>
+      <img id="logoB" src="assets/logo.svg" alt="rond_logo">
+      <a class="btnf" href="#">Free Consultation</a>
+    </nav>
+  </footer>
+</body>
+
 </html>
